--- a/static/css/about_style.css
+++ b/static/css/about_style.css
@@ -1,70 +1,30 @@
 body {
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    text-align: center;
-    background-color: rgb(248, 245, 245);
+    margin: 0px;
+    padding: 0px;
 }
 
-.container {
-    margin: 0px auto;
-    height: 900px;
-    width: 1100px;
-    padding: 50px;
-    text-align: center;
-    background-color: white;
-    box-shadow: 0 0 10px black;
-}
-
-.main {
-    margin-top: 100px;
-}
-
-p {
-    font-family: "Times New Roman", Times, serif;
-    font-size: medium;
-}
-
-
-header {
-    height: 40px;
-    background-color: #2a598a;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 0 10px black;
-    position: fixed;
-    width: 98%;
-    top: 0;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-}
-
-nav li {
-    margin-right: 40px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
-
-footer {
+.footer {
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 4%;
-    text-align: center;
-    position: fixed;
-    padding-bottom: 5px;
-    bottom: 0;
-    left: 0;
-    background: #2a598a;
-    color: #fff;
+    background: #385d8a;
+    border-top: solid 1px #0e0e0e;
+    color: white;
 }
 
 footer p {
-    margin-top: 7px;
+    text-align: center;
+}
+
+nav ul li a {
+    color:white;
+}
+
+@media (min-width: 768px) {
+    .main {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding: 2% 0;
+    }
 }
