--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -1,106 +1,87 @@
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;
-
-}
-
-.flex-item {
-    width: 30%;
-    height: 100%;
-    margin: 10px;
-    border: 1px solid #ddd;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-    align-items: center;
-    border-color: black;
-
-
-}
-
-.flex-item img {
-    width: 30%;
-    height: 50%;
-    object-fit: fill;
-}
 
 #search {
-    width: auto;
+  width: auto;
 }
 
 .btn {
-    border-radius: 1px;
-    margin-left: 10px;
-    height: 10%;
-    border-radius: 70px;
+  border-radius: 1px;
+  margin-left: 10px;
+  height: 10%;
+  border-radius: 70px;
 
-}
-
-/* Media queries for adjusting the layout */
-@media (max-width: 991px) {
-    .flex-container {
-        flex-wrap: wrap;
-    }
-
-    .flex-item {
-        flex-basis: 70%;
-        max-width: 70%;
-    }
-}
-
-@media (max-width: 767px) {
-    .flex-item {
-        flex-basis: 100%;
-        max-width: 100%;
-    }
 }
 
 .phone {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  object-fit: 50% ;
+}
+
+.phone h2 {
+  font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.phone img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.phone ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.phone li {
+  font-size: 18px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.footer {
+  position: bottom;
+  width: 100%;
+  height: 4%;
+  background: #385d8a;
+  border-top: solid 1px #0e0e0e;
+  color: white;
+}
+
+footer p {
+  text-align: center;
+}
+
+@media (max-width: 991px) {
+  .phone {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .flex-container {
+    flex-wrap: wrap;
+  }
+
+  .flex-item {
+    flex-basis: 70%;
+    max-width: 70%;
+  }
+}
+
+@media (max-width: 767px) {
+  .phone {
+    margin-right: 0;
+    margin-left: 0;
     margin-bottom: 20px;
   }
-  
-  .phone h2 {
-    font-size: 24px;
-    margin-top: 0;
-    margin-bottom: 20px;
-  }
-  
-  .phone img {
+
+  .flex-item {
+    flex-basis: 100%;
     max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
   }
-  
-  .phone ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .phone li {
-    font-size: 18px;
-    padding: 5px;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  /* responsive styles */
-  @media (max-width: 991.98px) {
-    .phone {
-      margin-right: 0;
-      margin-left: 0;
-    }
-  }
-  
-  @media (max-width: 767.98px) {
-    .phone {
-      margin-right: 0;
-      margin-left: 0;
-      margin-bottom: 20px;
-    }
-  }
+}
