--- a/static/css/dashboard_style.css
+++ b/static/css/dashboard_style.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 30%;
+  padding-bottom: 10%;
+  background-color: #ffffff;
 
 }
 
@@ -15,15 +16,8 @@
   padding: 20px;
   box-sizing: border-box;
   align-items: center;
-  border-color: black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 
-
-}
-
-.flex-item img {
-  width: 30%;
-  height: 50%;
-  object-fit: fill;
 }
 
 #search {
@@ -38,13 +32,27 @@
 
 }
 
-#btn {
-  padding-top: 5%;
+/* #btn {
+  padding-top: 1%;
+} */
+
+.vs {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: grey;
 }
 
-/* .phone_name {
-  position: absolute;
-} */
+.phone-name {
+  font-size: 0.9rem;
+  text-align: center;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.phone-name:hover {
+  color: gray;
+}
+
 
 .footer {
   position: absolute;
@@ -70,11 +78,21 @@ footer p {
     flex-basis: 70%;
     max-width: 70%;
   }
+  .flex-item img {
+    width: auto;
+    height: 50%;
+    object-fit: cover;
+  }
 }
 
 @media (max-width: 767px) {
   .flex-item {
     flex-basis: 100%;
     max-width: 100%;
+  }
+  .flex-item img {
+    width: auto;
+    height: 50%;
+    object-fit: cover;
   }
 }
