--- a/static/css/register_style.css
+++ b/static/css/register_style.css
@@ -2,7 +2,7 @@ body {
 	font-family: Arial, sans-serif;
 }
 .bg{
-    background-image: -webkit-linear-gradient(top,#2a598a,#ffffff);
+    background-image: -webkit-linear-gradient(top,#2a598a,#ece2cf);
     /* background-image: url('../images/login_bg.jpg'); */
     background-repeat: no-repeat;
     background-position: center center;
