--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                 <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index">Comparision</a>
+                <a class="nav-link" href="#">Comparision</a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="/index/about">About</a>
