--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,15 @@
                   </select>
                 </div>
                 <ul>
-                  <li><div id="row_data"></div></li>
+                  <!-- {% for value in dropdown_data %}
+                    {% if values in row_data %}
+                    <option values="1"></option>
+                    <div>data</div>
+                    {% endif %}
+                  {% endfor %} -->
+
+                  <div id="row_data"></div>
+
                 </ul>
               </div>
           </div>
