--- a/static/css/dashboard_style.css
+++ b/static/css/dashboard_style.css
@@ -32,14 +32,13 @@
 
 }
 
-/* #btn {
-  padding-top: 1%;
-} */
-
 .vs {
   font-size: 1.5rem;
   font-weight: bold;
   color: grey;
+}
+.vs:hover{
+  color:black;
 }
 
 .phone-name {
