--- a/static/css/dashboard_style.css
+++ b/static/css/dashboard_style.css
@@ -22,6 +22,7 @@
 
 #search {
   width: auto;
+  padding-left: 7%;
 }
 
 .btn {
@@ -94,4 +95,23 @@ footer p {
     height: 50%;
     object-fit: cover;
   }
+}
+ /* #logo{
+  max-height: 50px;
+  min-height: 20px;
+ } */
+ @media (max-width: 767px) {
+  #logo{
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+  #logo{
+    width: 40%;
+    height: 10%;
+    object-fit: cover;
+
+  }
+}
+#logo{
+  height: 60px;
 }
