--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#385d8a;">
-    <a class="navbar-brand" href="/dashboard">Phone Camera Comparision</a>
+    <a class="navbar-brand" href="/dashboard"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Error" id="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
